test/integration/bad/data_index/non_data_index13.stan
parameters {
  array[3] real y;

}
transformed parameters {
  corr_matrix[size(y)] z;
}
